// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login/> should enable login button when both text inputs are filled 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -263,10 +263,11 @@
                    },
                  ]
                }
                textContentType=\\"emailAddress\\"
                underlineColorAndroid=\\"transparent\\"
+               value=\\"email@gmail.com\\"
              />
            </View>
          </View>
          <View
            numberOfSpaces={6}
@@ -376,10 +377,11 @@
                    },
                  ]
                }
                textContentType=\\"password\\"
                underlineColorAndroid=\\"transparent\\"
+               value=\\"mypassword\\"
              />
              <View
                accessible={true}
                focusable={true}
                onClick={[Function onClick]}
@@ -473,22 +475,22 @@
              ]
            }
          />
          <View
            accessible={true}
-           focusable={false}
+           focusable={true}
            onClick={[Function onClick]}
            onResponderGrant={[Function onResponderGrant]}
            onResponderMove={[Function onResponderMove]}
            onResponderRelease={[Function onResponderRelease]}
            onResponderTerminate={[Function onResponderTerminate]}
            onResponderTerminationRequest={[Function onResponderTerminationRequest]}
            onStartShouldSetResponder={[Function onStartShouldSetResponder]}
            style={
              Object {
                \\"alignItems\\": \\"center\\",
-               \\"backgroundColor\\": \\"#ff99be\\",
+               \\"backgroundColor\\": \\"#eb0055\\",
                \\"borderRadius\\": 24,
                \\"borderWidth\\": 0,
                \\"flexDirection\\": \\"row\\",
                \\"height\\": 40,
                \\"justifyContent\\": \\"center\\","
`;

exports[`<Login/> should show error message and error inputs WHEN signin has failed because of network failure 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -158,10 +158,56 @@
                rightIcon-SVG-Mock
              </View>
            </View>
          </View>
          <View
+           numberOfSpaces={5}
+           style={
+             Array [
+               Object {
+                 \\"height\\": 20,
+               },
+             ]
+           }
+           testID=\\"input-error-top-spacer\\"
+         />
+         <View
+           style={
+             Array [
+               Object {
+                 \\"alignItems\\": \\"center\\",
+                 \\"flexDirection\\": \\"row\\",
+                 \\"maxWidth\\": 500,
+               },
+             ]
+           }
+         >
+           <View
+             height={24}
+             testID=\\"rule-icon-warn\\"
+             width={24}
+           >
+             rule-icon-warn-SVG-Mock
+           </View>
+           <Text
+             color=\\"#b60025\\"
+             style={
+               Array [
+                 Object {
+                   \\"color\\": \\"#b60025\\",
+                   \\"fontFamily\\": \\"Montserrat-SemiBold\\",
+                   \\"fontSize\\": 12,
+                   \\"lineHeight\\": 16,
+                   \\"paddingLeft\\": 4,
+                 },
+               ]
+             }
+           >
+             Erreur réseau. Tu peux réessayer une fois la connexion réétablie.
+           </Text>
+         </View>
+         <View
            numberOfSpaces={7}
            style={
              Array [
                Object {
                  \\"height\\": 28,
@@ -205,18 +251,18 @@
                  },
                ]
              }
            />
            <View
-             isError={false}
+             isError={true}
              isFocus={false}
              style={
                Array [
                  Object {
                    \\"alignItems\\": \\"center\\",
                    \\"backgroundColor\\": \\"#ffffff\\",
-                   \\"borderColor\\": \\"#c7c7cc\\",
+                   \\"borderColor\\": \\"#b60025\\",
                    \\"borderRadius\\": 22,
                    \\"borderStyle\\": \\"solid\\",
                    \\"borderWidth\\": 1,
                    \\"flexDirection\\": \\"row\\",
                    \\"height\\": 40,
@@ -314,18 +360,18 @@
                  },
                ]
              }
            />
            <View
-             isError={false}
+             isError={true}
              isFocus={false}
              style={
                Array [
                  Object {
                    \\"alignItems\\": \\"center\\",
                    \\"backgroundColor\\": \\"#ffffff\\",
-                   \\"borderColor\\": \\"#c7c7cc\\",
+                   \\"borderColor\\": \\"#b60025\\",
                    \\"borderRadius\\": 22,
                    \\"borderStyle\\": \\"solid\\",
                    \\"borderWidth\\": 1,
                    \\"flexDirection\\": \\"row\\",
                    \\"height\\": 40,"
`;

exports[`<Login/> should show error message and error inputs WHEN signin has failed because of wrong credentials 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -158,10 +158,56 @@
                rightIcon-SVG-Mock
              </View>
            </View>
          </View>
          <View
+           numberOfSpaces={5}
+           style={
+             Array [
+               Object {
+                 \\"height\\": 20,
+               },
+             ]
+           }
+           testID=\\"input-error-top-spacer\\"
+         />
+         <View
+           style={
+             Array [
+               Object {
+                 \\"alignItems\\": \\"center\\",
+                 \\"flexDirection\\": \\"row\\",
+                 \\"maxWidth\\": 500,
+               },
+             ]
+           }
+         >
+           <View
+             height={24}
+             testID=\\"rule-icon-warn\\"
+             width={24}
+           >
+             rule-icon-warn-SVG-Mock
+           </View>
+           <Text
+             color=\\"#b60025\\"
+             style={
+               Array [
+                 Object {
+                   \\"color\\": \\"#b60025\\",
+                   \\"fontFamily\\": \\"Montserrat-SemiBold\\",
+                   \\"fontSize\\": 12,
+                   \\"lineHeight\\": 16,
+                   \\"paddingLeft\\": 4,
+                 },
+               ]
+             }
+           >
+             E-mail ou mot de passe incorrect.
+           </Text>
+         </View>
+         <View
            numberOfSpaces={7}
            style={
              Array [
                Object {
                  \\"height\\": 28,
@@ -205,18 +251,18 @@
                  },
                ]
              }
            />
            <View
-             isError={false}
+             isError={true}
              isFocus={false}
              style={
                Array [
                  Object {
                    \\"alignItems\\": \\"center\\",
                    \\"backgroundColor\\": \\"#ffffff\\",
-                   \\"borderColor\\": \\"#c7c7cc\\",
+                   \\"borderColor\\": \\"#b60025\\",
                    \\"borderRadius\\": 22,
                    \\"borderStyle\\": \\"solid\\",
                    \\"borderWidth\\": 1,
                    \\"flexDirection\\": \\"row\\",
                    \\"height\\": 40,
@@ -314,18 +360,18 @@
                  },
                ]
              }
            />
            <View
-             isError={false}
+             isError={true}
              isFocus={false}
              style={
                Array [
                  Object {
                    \\"alignItems\\": \\"center\\",
                    \\"backgroundColor\\": \\"#ffffff\\",
-                   \\"borderColor\\": \\"#c7c7cc\\",
+                   \\"borderColor\\": \\"#b60025\\",
                    \\"borderRadius\\": 22,
                    \\"borderStyle\\": \\"solid\\",
                    \\"borderWidth\\": 1,
                    \\"flexDirection\\": \\"row\\",
                    \\"height\\": 40,"
`;
